--- a/css/To-do.css
+++ b/css/To-do.css
@@ -61,4 +61,56 @@
 	display: flex;
 	justify-content:flex-end;
 }
+.todo-check{
+	cursor: pointer;
+	color: black;
+}
+.todo-check:hover{
+	padding: 50px;
+}
+
+
+/* Hide the default checkbox */
+.custom-checkbox input[type="checkbox"] {
+  display: none;
+}
+
+/* Custom checkbox appearance */
+.custom-checkbox .checkmark {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #eee;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  position: relative;
+  vertical-align: middle;
+  margin-right: 8px;
+}
+
+/* Checked state */
+.custom-checkbox input[type="checkbox"]:checked + .checkmark {
+  background-color: #4caf50;
+  border-color: #4caf50;
+}
+
+/* Add checkmark icon using :after */
+.custom-checkbox .checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 6px;
+  top: 2px;
+  width: 6px;
+  height: 12px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+/* Show the checkmark when checked */
+.custom-checkbox input[type="checkbox"]:checked + .checkmark::after {
+  display: block;
+}
+
 
