--- a/css/To-do.css
+++ b/css/To-do.css
@@ -197,5 +197,9 @@ display: none;
   transition: background-color 0.2s ease;
 }
 
-
+select{
+	padding: 7px;
+	border-radius: 10px;
+	font-size: medium;
+}
 
